Footer CSS fix on mobile side in frontend.

--- a/frontend/code/frontend/src/scss/components/Footer.scss
+++ b/frontend/code/frontend/src/scss/components/Footer.scss
@@ -17,7 +17,9 @@
           .footer-buttons {
             justify-content: center;
             width: 100%;
-            padding: 0.5em;
+            @media only screen and(min-width:961px) {
+              padding: 0.5em;
+            }
             .footer-button {
               flex-grow: 1;
               text-align: center;
